# docuvault

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  test_all_endpoints.py
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_core_assets.py  003_flexible_assets_documents.py  004_phase4_8_tables.py  005_meshcentral_integration.py  006_systems_chat.py  007_probe_columns.py  008_chat_message_seq.py  009_chat_message_usage.py
backend/app/: config.py  main.py
backend/app/core/: database.py  dependencies.py  encryption.py  security.py
backend/app/models/: __init__.py  app_settings.py  attachment.py  audit_log.py  base.py  checklist.py  configuration.py  contact.py  document.py  document_folder.py  document_template.py  document_version.py  domain.py  field_change_log.py  flag.py  flexible_asset.py  flexible_asset_field.py  flexible_asset_section.py  flexible_asset_type.py  ip_whitelist.py  location.py  organization.py  password.py  password_audit.py  password_category.py  password_share.py  relationship.py  runbook.py  sidebar_item.py  ssl_certificate.py  system.py  user.py  webhook.py
backend/app/schemas/: auth.py  common.py  configuration.py  contact.py  document.py  domain.py  flexible_asset.py  location.py  organization.py  password.py  ssl_certificate.py  system.py
backend/app/services/: anthropic_chat.py  auth_service.py  domain_probe.py  ionos_service.py  mempalace_client.py  meshcentral_service.py  mfa_service.py  password_service.py  registrar_service.py  ssl_probe.py  (+1 more)
(+119 files in other folders)
