[project]
name = "docuvault-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "cryptography>=43.0.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
    "apscheduler>=3.10.0",
    "diff-match-patch>=20230430",
    "psycopg2-binary>=2.9.0",
    "websockets>=13.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
